--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="bg-amber-900 w-full rounded-tr-[1rem]"></div>
         <div id="hole" class="flex w-[40rem] h-10 rounded-b-[2rem] bg-black justify-center">
           <p class="text-white">Me</p>
-          <p class="text-white">Skills</p>
+          <p class="text-white">Skilwadawdls</p>
           <p class="text-white">Projects</p>
         </div>
         <div class="bg-amber-900 w-full rounded-tl-[1rem]"></div>
