--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <div id="container" class="flex flex-col w-screen content-center bg-black p-[10px]">
     <div id="section1" class="flex flex-col w-full h-[97.5vh] mb-3 bg-amber-900 rounded-lg justify-center overflow-hidden">
-      <div id="punch" class="flex w-full h-10 justify-center">
-        <div class="bg-amber-900 w-full rounded-tr-[1rem]"></div>
-        <div id="hole" class="flex w-[40rem] h-10 rounded-b-[2rem] bg-black justify-center">
+      <div id="punch" class="flex w-full h-10 justify-center p-2">
+        <div class="bg-transparent w-full rounded-tr-[1rem]"></div>
+        <div id="hole" class="flex w-[40rem] h-10 rounded-[5rem] bg-black items-center justify-center">
           <p class="text-white">Me</p>
           <p class="text-white">Skils</p>
           <p class="text-white">Projects</p>
         </div>
-        <div class="bg-amber-900 w-full rounded-tl-[1rem]"></div>
+        <div class="bg-transparent w-full rounded-tl-[1rem]"></div>
       </div>
 
       <div id="midd" class="flex flex-1 justify-center items-center">
